--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 										<a href="#"> <img src="img/upload/slide2.jpeg" class="img-fluid mx-auto d-block" alt=""/> </a>
 									</div>
 																		<div class="carousel-item">
-										<a href="#"> <img src="img/upload/slide3.jpg" class="img-fluid mx-auto d-block" alt=""/> </a>
+										<a href="#"> <img src="img/upload/slide3.jpeg" class="img-fluid mx-auto d-block" alt=""/> </a>
 									</div>
 																		<div class="carousel-item">
 										<a href="#"> <img src="img/upload/slide5.jpg" class="img-fluid mx-auto d-block" class="img-fluid mx-auto d-block" alt=""/> </a>
@@ -300,10 +300,10 @@
 									</div>
 																		
 																		<div class="carousel-item">
-										<a href="/events"> <img src="img/upload/slide1.jpg" class="img-fluid mx-auto d-block" class="img-fluid mx-auto d-block" alt=""/> </a>
+										<a href="/events"> <img src="img/upload/slide2.jpg" class="img-fluid mx-auto d-block" class="img-fluid mx-auto d-block" alt=""/> </a>
 									</div>
 									<div class="carousel-item">
-										<a href="/events"> <img src="img/upload/slide1.jpg" class="img-fluid mx-auto d-block" class="img-fluid mx-auto d-block" alt=""/> </a>
+										<a href="/events"> <img src="img/upload/slide3.jpg" class="img-fluid mx-auto d-block" class="img-fluid mx-auto d-block" alt=""/> </a>
 									</div>
 									<div class="carousel-item">
 										<a href="/events"> <img src="https://s3.amazonaws.com/sscbodhi/Drmehta_Reettest-138_que/download.png" class="img-fluid mx-auto d-block" class="img-fluid mx-auto d-block" alt=""/> </a>
@@ -330,7 +330,7 @@
 				<div class="col-lg-4">
 					<div class="lg_facebook">					
 						<div class="fb-page" data-href="https://www.facebook.com/bodhiai" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-height="600px">
-						<blockquote cite="https://www.facebook.com/sccirewari/?rf=1012434915634496" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/bodhiai">Sanklap Academy</a></blockquote></div>
+						<blockquote cite="https://www.facebook.com/bodhiai" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/bodhiai">Sanklap Academy</a></blockquote></div>
 					</div>
 					<div class="sm_facebook">	
 						<div class="fb-page" data-href="https://www.facebook.com/sccirewari/" data-width="380"  data-hide-cover="false" data-show-facepile="true"></div>
