--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 						<blockquote cite="https://www.facebook.com/bodhiai" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/bodhiai">Sanklap Academy</a></blockquote></div>
 					</div>
 					<div class="sm_facebook">	
-						<div class="fb-page" data-href="https://www.facebook.com/sccirewari/" data-width="380"  data-hide-cover="false" data-show-facepile="true"></div>
+						<div class="fb-page" data-href="https://www.facebook.com/bodhiai" data-width="380"  data-hide-cover="false" data-show-facepile="true"></div>
 					</div>
 				</div>
 			</div>
