--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" /> 
 	<!-- Social Sharing -->
 	<meta property="og:site_name" content="index.html"/>
-	<meta property="og:title" content="Sankalp Academy in Rewari Harayana."/>
+	<meta property="og:title" content="Sankalp Academy in Madhya Pradesh."/>
 	<meta property="og:description" content="The bright performances of Sankalp Academy in Hoshangabad,MP students year after year have been the driving force behind its success."/>
 	<meta property="og:image" content="img/display.jpg">
 	<meta property="og:url" content="index.html">
@@ -418,7 +418,8 @@
 						<h1> Admission </h1>
 						<h1> OPEN </h1>
 						 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfXEjFFzLcBh36ZzqBK86AuVMK9omANJ9vMFMdWOaz4lWkfng/viewform?embedded=true"> <h1>Contact Us </h1> </a>
-						<a href="https://docs.google.com/forms/d/e/1FAIpQLSfXEjFFzLcBh36ZzqBK86AuVMK9omANJ9vMFMdWOaz4lWkfng/viewform?embedded=true" class="btn"><div>Sankalp Academy</br>Rewari Harayana</div></a>
+						<a href="https://docs.google.com/forms/d/e/1FAIpQLSfXEjFFzLcBh36ZzqBK86AuVMK9omANJ9vMFMdWOaz4lWkfng/viewform?embedded=true" class="btn"><div>Sankalp Academy</br>Rewari 
+						a</div></a>
 
 					</div>
 					<!--
