--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-https://github.com/Sanjaymali36/schoolgroup<!DOCTYPE html>
+<!DOCTYPE html>
 <!--[if lt IE 7 ]> <html class="ie ie6 no-js" lang="en"> <![endif]-->
 <!--[if IE 7 ]>    <html class="ie ie7 no-js" lang="en"> <![endif]-->
 <!--[if IE 8 ]>    <html class="ie ie8 no-js" lang="en"> <![endif]-->
