--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<li><a href="#gallery" class="">Gallery</a></li>
 					<!-- <li><a href="branches.html" class="">Branches</a></li> -->
 				
-					<li><a href="https://student-website-8dd82.web.app/#/" class="online_add">Teacher Login</a></li>
+					<li><a href="https://bodhiteacher.firebaseapp.com/#/" class="online_add">Teacher Login</a></li>
 					<li><a href="https://student-website-8dd82.web.app/#/" class="online_add">Student Login</a></li>
 					</ul></div></div></nav>
 		<!-- Slider Section Start -->
